# agents-hub-ai

./: .gitignore  LICENSE  README.md
apps/surprise_trip/: README.md  pyproject.toml
apps/surprise_trip/src/: requirements.txt
apps/surprise_trip/src/surprise_travel/: main.py
apps/surprise_trip/src/surprise_travel/config/: countries.yaml  tasks.yaml
